added new groceries

--- a/home.html
+++ b/home.html
@@ -4,6 +4,10 @@
         <h2>ENNA KODUMA SIR ITHU</h2>
     </head>
     <body>
-        nan riyas
+       <p>mohamed riyas</p>
+       <ul>
+           <li>thakkali</li>
+           <li>tomato</li>
+       </ul>
     </body>
 </html>
